# DSA-Homework

./: README.md
Assignment1/: DAIterator.cpp  DynamicArray.cpp  DynamicArray.h
Assignment1/Tests/: ExtendedTest.cpp  personalTest.cpp
Assignment2/LinkedList/: LinkedListIterator.cpp  TElemLinkedList.cpp
Assignment2/SortedSet/: SortedSet.cpp
Assignment2/Tests/: ExtendedTest.cpp
Assignment4/: CMakeLists.txt  main.cpp
Assignment4/DoubleLinkedListArray/: DoubleLinkedListArray.cpp  DoubleLinkedListArray.h
Assignment4/Set/: Set.cpp  Set.h  SetIterator.cpp  SetIterator.h
Assignment4/Tests/: ExtendedTest.cpp  TestingClass.cpp  TestingClass.h
DSAFiles/: DSACODE.txt  SDA.txt
DSAFiles/www.cs.ubbcluj.ro/: robots.txt.tmp
Last Assignment/: BinarySearchTree.cpp  BinarySearchTree.h  Matrix.cpp  Matrix.h  TestBST.cpp  TestBST.h
